After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 780361 - The cursor image is fixed in screenshots
The cursor image is fixed in screenshots
Status: RESOLVED FIXED
Product: gnome-flashback
Classification: Other
Component: screenshot
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Flashback Maintainers
GNOME Flashback Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-21 16:37 UTC by Antonio Ospite
Modified: 2017-03-21 21:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
The cursor image is fixed in screenshots (15.35 KB, image/png)
2017-03-21 16:37 UTC, Antonio Ospite
Details

Description Antonio Ospite 2017-03-21 16:37:26 UTC
Created attachment 348423 [details]
The cursor image is fixed in screenshots

When capturing screenshots including the cursor, the final image does not reflect what's shown on the screen.

Steps to reproduce:

1. Launch "gnome-screenshot" in interactive mode;
2. set a delay and start the capture;
3. go over an link in a web page (or make the cursor change in any other way) before the actual screenshot is taken.

The expected result would be to see the left hand as a mouse cursor image, instead the normal arrow gets drawn.

See the attached image.

FWICS this is because gnome-flashback hardcodes the cursor name in gnome-flashback/libscreenshot/gf-screenshot.c::take_screenshot_real() like this:

cursor = gdk_cursor_new_for_display (display, GDK_LEFT_PTR);

I see that gnome-shell solves this by asking mutter about the cursor, GStreamer ximagesrc (in gst-plugins-good) uses XFixes directly instead.

Thanks,
   Antonio