screenshot: use xfixes to get cursor image

https://bugzilla.gnome.org/show_bug.cgi?id=780361